[project]
name = "blank-template"
dynamic = ["version"]
description = "blank python project created by rye"
authors = [
    { name = "Cedric Young", email = "ccedricyoung@gmail.com" }
]
dependencies = [
    "typer~=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
"blank-template" = "blank_template:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]  # get build version from tag
source = "scm"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=8.3.2",
    "build~=1.2.1",
]

[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
test = "rye test"
all = { chain = ["fmt", "lint", "test"] }
